Fix carousel spacing and 3D projection math

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  overflow-y: scroll;
 }
 
 body {
